# hs-crypto-platform

./: .gitignore  .gitmodules  README.md
meta/: crypto-platform.cabal
meta/Crypto/: Platform.hs
