Name:                crypto-platform
Version:             2013.9.0
Description: 
    A set of packages that provides an extensive coverage of cryptographic functions
    and various standards related to cryptography
    .
    The goals are to provide a consistant platform, while still being easy to use.
    .
    Current coverage is:
    .
    * public key cryptography (RSA, DSA, DH)
    * cryptographic ciphers (AES, RC4, DES, 3DES, Blowfish, Camellia)
    * cryptographic random generator
    * cryptographic hashes (MD, SHA1, SHA-2, SHA-3, etc), siphash.
    * ASN.1
    * X.509 certificate and CRL
    .
    The platform modules re-export the most used features, but others
    modules are available in their respective packages.

License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Crypto platform meta package.
Build-Type:          Simple
Category:            Cryptography
stability:           experimental
Cabal-Version:       >=1.8
Homepage:            http://github.com/vincenthz/hs-crypto-platform
data-files:          README.md

Library
  Build-Depends:     base >= 3 && < 5
                   , byteable
                   , pem >= 0.1 && < 0.3
                   -- base memory types
                   , securemem >= 0.1 && < 0.2
                   -- random
                   , crypto-random >= 0.0 && < 0.1
                   , cprng-aes >= 0.5 && < 0.6
                   -- symmetric ciphers
                   , crypto-cipher-types >= 0.0 && < 0.1
                   , crypto-cipher-benchmarks >= 0.0 && < 0.1
                   , crypto-cipher-tests >= 0.0 && < 0.1
                   , cipher-aes >= 0.2 && < 0.3
                   , cipher-blowfish >= 0.0 && < 0.1
                   , cipher-des >= 0.0 && < 0.1
                   , cipher-camellia >= 0.0 && < 0.1
                   , cipher-rc4 >= 0.1 && < 0.2
                   -- public key cryptography
                   , crypto-numbers >= 0.2 && < 0.3
                   , crypto-pubkey-types >= 0.4 && < 0.5
                   , crypto-pubkey >= 0.2 && < 0.3
                   -- hash
                   , cryptohash >= 0.9 && < 0.12
                   , siphash >= 1.0 && < 1.1
                   -- ASN.1
                   , asn1-encoding >= 0.8 && < 0.9
                   , asn1-parse >= 0.8 && < 0.9
                   , asn1-types >= 0.2 && < 0.3
                   -- X.509
                   , x509 >= 1.4 && < 1.5
                   , x509-store >= 1.4 && < 1.5
                   , x509-system >= 1.4 && < 1.5
                   , x509-validation >= 1.4 && < 1.5
  Exposed-modules:   Crypto.Platform

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-crypto-platform
